# pi-netconfig

./: .gitignore  README.md  pyproject.toml
deprecated/: README.md
deprecated/docs/: README.md
deprecated/governance/: README.md
deprecated/src/: README.md
deprecated/workspace/: README.md
docs/: README.md
governance/: README.md  governance.md
release/: README.md
src/: README.md  apmanager.py  connectionmanager.py  installer.py  main.py  pytest-report.txt  pytest.txt  statemonitor.py  webserver.py
workspace/: README.md
workspace/audit/: audit-0001-governance-compliance.md
workspace/change/: README.md  change-0001-connectionmanager-defect-corrections.md  change-0002-periodic-audits.md  change-0003-governance-scope-clarification.md  change-0004-version-synchronization.md
workspace/design/: README.md  design-0000-master.md  design-0001-installer.md  design-0002-statemonitor.md  design-0003-connectionmanager.md  design-0004-apmanager.md  design-0005-webserver.md  design-0006-servicecontroller.md  design-0007-system-flow-diagram.md  design-0008-systemd-service-diagram.md  traceability-matrix.md
workspace/issues/: README.md  issue-0001-config-persistence-incorrect-field.md  issue-0001-installer-generation-deviations.md  issue-0002-missing-thread-safety.md  issue-0003-nmcli-delete-error-handling.md  issue-0004-missing-directory-creation.md  issue-0005-missing-unit-tests.md  issue-0005-statemonitor-class-name-mismatch.md  issue-0006-pytest-asyncio-not-installed.md
workspace/prompt/: prompt-0001-installer.md  prompt-0002-statemonitor.md  (+7 more)
(+24 files in other folders)
